--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -9,6 +9,7 @@
   "author": "Ondrej Tomco, Jakub Seliga, Erik Ruszinka",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.11",
