--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -9,6 +9,8 @@
   "author": "Ondrej Tomco, Jakub Seliga, Erik Ruszinka",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
