--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -10,11 +10,18 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^2.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "*",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-messages": "^1.0.1",
+    "express-session": "*",
     "handlebars": "^4.0.11",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
